--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Bootstrap Admin Template</title>
     <link rel="stylesheet" href="/bootstrap-5.2.0-beta1-dist/bootstrap-5.2.0-beta1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/fontawesome-free-6.1.1-web/css/fontawesome.min.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 </head>
 <body>
 <div class="header">
-
+    <img src="/zalego logo.jpg" ait="zalego" height="50" class="rounded-circle">
+<a href="#" class="navbar-trigger"><span></span></a>
 </div>
 <div class="sidebar">
     <nav>
@@ -44,35 +45,58 @@
 <div class="main-content">
             Main content here
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
+        <div class="row">l-lg-12">
                 <div class="card-reader bg-dark text-white text-center">
                     <span>Top Content</span>
-<div class="row">
+                </div>
+            </div>
+        </div>
+                <div class="row">
     <div class="col-lg-3">
         <div class="card-reader bg-dark text-white text-center">
             <span>Top Content</span>
         </div>
+        <div class="card-body"></div>
+        <div class="card-footer"></div>
         </div>
-</div>
-<div class="row">
+
     <div class="col-lg-3">
         <div class="card-reader bg-dark text-white text-center">
             <span>Top Content</span>
         </div>
+        <div class="card-body">
+            <span><i class="fa fa-group"></i></span>
+            <span class="float-right">00</span>
         </div>
-</div><div class="row">
+        <div class="card-footer"></div>
+    </div>
+    
     <div class="col-lg-3">
         <div class="card-reader bg-dark text-white text-center">
             <span>Top Content</span>
         </div>
+        <div class="card-body">
+            <span><i class="fa fa-group"></i></span>
+            <span class="float-right">00</span>
         </div>
-</div><div class="row">
+        <div class="card-footer"></div>
+    </div>
+
     <div class="col-lg-3">
+        <div class="card-reader bg-dark text-white text-center">
+            <span>Top Content</span>
+        </div>
+        <div class="card-body">
+            <span><i class="fa fa-group"></i></span>
+            <span class="float-right">00</span>
+        </div>
+        <div class="card-footer"></div>
+    </div>
+    <div class="col-lg-12">
         <div class="card-reader bg-dark text-white text-center">
             <span>Student Analysis</span>
         </div>
-        </div>
+    </div>
 </div>
 
                 </div>
