--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
 
 </div>
 <div class="main-content">
-            Main content here
+            
     <div class="container-fluid">
-        <div class="row">l-lg-12">
-                <div class="card-reader bg-dark text-white text-center">
-                    <span>Top Content</span>
+        <div class="row">
+                <div class="col-lg-12">
+                    <div class="card-reader bg-dark text-white text-center">
+                        <span>Top Content</span>
+                    </div>
                 </div>
             </div>
         </div>
