--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
     </div>
 </div>
 <button type="submit" name="submitbutton"class="btn btn-primary mt-5">Submit</button>
-<p>Have an account?Sign in here</p>
+<p>Have an account?Sign in<button type="here" name="here"class="btn btn-primary mt-5">here</button> </p>
 
 
 
