--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="row">
     <div class="col-lg-3">
         <div class="card-reader bg-dark text-white text-center">
-            <span>Top Content</span>
+            <span>Students</span>
         </div>
         <div class="card-body"></div>
         <div class="card-footer"></div>
@@ -64,7 +64,7 @@
 
     <div class="col-lg-3">
         <div class="card-reader bg-dark text-white text-center">
-            <span>Top Content</span>
+            <span>Available courses</span>
         </div>
         <div class="card-body">
             <span><i class="fa fa-group"></i></span>
@@ -75,18 +75,18 @@
     
     <div class="col-lg-3">
         <div class="card-reader bg-dark text-white text-center">
-            <span>Top Content</span>
+            <span>Campuses</span>
         </div>
         <div class="card-body">
             <span><i class="fa fa-group"></i></span>
-            <span class="float-right">00</span>
+            <span class="float-end">00</span>
         </div>
         <div class="card-footer"></div>
     </div>
 
     <div class="col-lg-3">
         <div class="card-reader bg-dark text-white text-center">
-            <span>Top Content</span>
+            <span>Users</span>
         </div>
         <div class="card-body">
             <span><i class="fa fa-group"></i></span>
