--- a/students.html
+++ b/students.html
@@ -46,27 +46,78 @@
     <div class="container-fluid">
         <div class="row">
                 <div class="card-reader bg-dark text-white text-center">
-                    <span>Top Content</span>
+                    <span>Students</span>
                 </div>
 
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <table class="table">
+                <table class="table table-striped table-hover table-responsive">
                         <thead>
+                            
                             <tr>
-                                <th scope="col">id</th>
-                                <th scope="col">fullname</th>
-                                <th scope="col">phone</th>
-                                <th scope="col">email</th>
-                                <th scope="col">course</th>
-                                <th scope="col">gender</th>
-
+                                <th scope="col">ID</th>
+                                <th scope="col">FullName</th>
+                                <th scope="col">PhoneNumber</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Gender</th>
+                                <th scope="col">Course</th>
+                                 <th scope="col">Enrolled on</th>
+                                 <th scope="col">Action</th>
                             </tr>
                         </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Macy Wanjiku</td>
+                            <td>+254704566421</td>
+                            <td>macy@gmail.com</td>
+                            <td>female</td>
+                            <td>Web Development</td>
+                            <td>9th May 2022</td>
+                            <td>
+                                <a href="#" class="btn btn-primary btn-sm">
+                                    <i class="fa fa-edit"></i>
+                                </a>
+                                <a href="#" class="btn btn-info btn-sm">
+                                    <i class="fa fa-eye"></i>
+                                </a>
+                                <a href="#" class="btn btn-danger btn-sm">
+                                    <i class="fa fa-trash"></i>
+                                </a>
+                            </td>
+
+
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Macy Wanjiku</td>
+                            <td>+254704566421</td>
+                            <td>macy@gmail.com</td>
+                            <td>female</td>
+                            <td>Web Development</td>
+                            <td>9th May 2022</td>
+                            <td>
+                                <a href="#" class="btn btn-primary btn-sm">
+                                    <i class="fa fa-edit"></i>
+                                </a>
+                                <a href="#" class="btn btn-info btn-sm">
+                                    <i class="fa fa-eye"></i>
+                                </a>
+                                <a href="#" class="btn btn-danger btn-sm">
+                                    <i class="fa fa-trash"></i>
+                                </a>
+                            </td>
+
+
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
     </div>
 </div>
-     
+     </body>
+</html>
